# price-driven-switch

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: python-tox.yml  test-and-publish.yml
backend/: .pylintrc  pyproject.toml  tox.ini
backend/config/: supervisord.conf
backend/src/price_driven_switch/: __main__.py
backend/src/price_driven_switch/api/routes/: prices.py  settings.py  subscription.py  switches.py
backend/src/price_driven_switch/core/: config.py  logging.py
backend/src/price_driven_switch/services/: price_file.py  switch_logic.py  tibber_connection.py
backend/tests/: conftest.py
backend/tests/e2e/: test_api_key_routes.py  test_e2e_api.py  test_switch_states.py
backend/tests/fixtures/: fixture_prices_lowval.json  settings_test.toml  test_prices.json  test_setpoints.toml
backend/tests/integration/: try_tibber.py
backend/tests/unit/: test_configuration.py  test_price_file.py  test_prices.py  test_switch_logic.py  test_tibber.py
frontend/: package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/api/: client.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/settings/: +page.svelte
nginx/: dockerfile  ngnix.conf
price_driven_switch/: .dockerignore  __main__.py  dockerfile
price_driven_switch/backend/: configuration.py  grid_rent.py  logging_utils.py  price_file.py  prices.py  switch_logic.py  tibber.py  tibber_connection.py  try_tibber.py
price_driven_switch/config/: setpoints.toml  supervisord.conf
price_driven_switch/frontend/: 1_📊_Dashboard.py  functions.py  st_functions.py
price_driven_switch/frontend/pages/: 1_⚙️_Settings.py  2_Status.py  2_ℹ️_Status.py
tests/: conftest.py
tests/acceptance/: test_acceptance_api.py
tests/fixtures/: price_fixtures.py  settings_test.toml  test_setpoints_out_of_range.toml
tests/frontend/: 1_📊_TEST_Dashboard.py  functions_test.py  prices_test.json
tests/frontend/pages/: 1_⚙️_Settings_test.py
tests/integration/: test_grid_rent_integration.py  test_switch_logic_integration.py  try_tibber.py
tests/unit/: test_configuration.py  test_get_switch_json.py  test_grid_rent.py  test_logging_utils.py  test_price_file.py  test_prices.py  test_st_functions.py  test_switch_logic.py  test_switch_logic_expanded.py  test_tibber.py
