[project]
authors = [{ name = "pavelapekhtin", email = "pavel.apekhtin@gmail.com" }]
license = { text = "MIT" }
requires-python = "<4.0,>=3.11"
name = "price-driven-switch"
version = "4.2.3"
description = "Provide on/off states via GET request based on power price from Tibber API"
readme = "README.md"
dependencies = [
    "asyncio<4.0.0,>=3.4.3",
    "python-graphql-client<1.0.0,>=0.4.3",
    "uvicorn<1.0.0,>=0.23.2",
    "python-dotenv<2.0.0,>=1.0.0",
    "watchdog<4.0.0,>=3.0.0",
    "toml<1.0.0,>=0.10.2",
    "pytibber==0.30.8",
    "gql[all]==3.5.0",
    "icecream<3.0.0,>=2.1.3",
    "loguru<1.0.0,>=0.7.2",
    "types-requests<3.0.0.0,>=2.31.0.8",
    "plotly<6.0.0,>=5.14.1",
    "pandas<3.0.0,>=2.1.0",
    "streamlit>=1.22.0,<2.0.0",
    "fastapi<1.0.0,>=0.109.2",
]

[dependency-groups]
prod = []
dev = [
    "pytest<8.0.0,>=7.3.1",
    "pylint<3.0.0,>=2.17.3",
    "pytest-cov<5.0.0,>=4.0.0",
    "freezegun<2.0.0,>=1.2.2",
    "commitizen<4.0.0,>=3.7.0",
    "mypy<2.0.0,>=1.5.1",
    "types-toml<1.0.0.0,>=0.10.8.7",
    "ipykernel<7.0.0,>=6.25.2",
    "hypothesis<7.0.0,>=6.86.2",
    "pytest-asyncio<1.0.0,>=0.21.1",
    "httpx<1.0.0,>=0.25.0",
    "ruff<1.0.0,>=0.8.4",
]


[tool.uv]
default-groups = ["prod", "dev"]

[tool.mypy]
exclude = "^tests/.*"

[tool.pyright]
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownVariableType = false
reportUnknownMemberType = false

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = false


[tool.ruff]
lint.extend-select = ["B", "Q", "C4", "SIM"]
lint.ignore = ["RUF046", "ANN201", "ANN202"]
lint.fixable = ["ALL"]
lint.unfixable = []
target-version = "py311"

[tool.setuptools]
packages = ["price_driven_switch"]
