[project]
authors = [{ name = "pavelapekhtin", email = "pavel.apekhtin@gmail.com" }]
license = { text = "MIT" }
requires-python = "<4.0,>=3.11"
name = "price-driven-switch"
version = "4.3.0"
description = "Provide on/off states via GET request based on power price from Tibber API"
readme = "README.md"
dependencies = [
    "asyncio<4.0.0,>=3.4.3",
    "python-graphql-client<1.0.0,>=0.4.3",
    "uvicorn<1.0.0,>=0.23.2",
    "python-dotenv<2.0.0,>=1.0.0",
    "watchdog<4.0.0,>=3.0.0",
    "toml<1.0.0,>=0.10.2",
    "pytibber==0.30.8",
    "gql[all]==3.5.0",
    "icecream<3.0.0,>=2.1.3",
    "loguru<1.0.0,>=0.7.2",
    "plotly<6.0.0,>=5.14.1",
    "pandas<3.0.0,>=2.1.0",
    "streamlit>=1.22.0,<2.0.0",
    "fastapi<1.0.0,>=0.109.2",
]



[dependency-groups]
prod = []
dev = [
    "pytest<8.0.0,>=7.3.1",
    "pylint<3.0.0,>=2.17.3",
    "pytest-cov<5.0.0,>=4.0.0",
    "freezegun<2.0.0,>=1.2.2",
    "commitizen<4.0.0,>=3.7.0",
    "ipykernel<7.0.0,>=6.25.2",
    "hypothesis<7.0.0,>=6.86.2",
    "pytest-asyncio<1.0.0,>=0.21.1",
    "httpx<1.0.0,>=0.25.0",
    "ruff<1.0.0,>=0.8.4",
]


[tool.uv]
default-groups = ["prod", "dev"]

[tool.pyright]
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownVariableType = false
reportUnknownMemberType = false

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = false


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "ANN",   # flake8-annotations
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "RUF"    # ruff-specific rules
]
ignore = [
    "RUF046",
    "ANN201",
    "ANN202",
    "ANN206",
    "ANN401", # Dynamically typed expressions (Any) are disallowed
    "F821",   # Dynamically typed expressions (Any) are disallowed
    "E501",   # Line too long (let formatter handle this)
    "COM812", # Trailing comma missing (conflicts with formatter)
    "ISC001"  # Single line implicit string concatenation (conflicts with formatter)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN001",  # Missing type annotation for function argument (test fixtures)
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.setuptools]
packages = ["price_driven_switch"]
